--- a/src/app/component/topbar/topbar.component.html
+++ b/src/app/component/topbar/topbar.component.html
@@ -1,4 +1,5 @@
 <nav>
     <button routerLink={{routeView1}} routerLinkActive="active-link">View1</button>
     <button routerLink="/view2" routerLinkActive="active-link">View2</button>
+    <button routerLinkActive="active-link">Empty</button>
 </nav>
