--- a/src/app/modules/studente/studente.component.html
+++ b/src/app/modules/studente/studente.component.html
@@ -1,5 +1,19 @@
-<fieldset>Studente
-    <p>Nome: {{studente.nome}}</p>
-    <p>Cognome: {{studente.cognome}}</p>
-    <input routerLink="detail">
-</fieldset>
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+    <!--- Note that these columns can be defined in any order.
+          The actual rendered columns are set as a property on the row definition" -->
+
+    <!-- Position Column -->
+    <ng-container matColumnDef="nome">
+        <th mat-header-cell *matHeaderCellDef> Nome </th>
+        <td mat-cell *matCellDef="let element"> {{element.nome}} </td>
+    </ng-container>
+
+    <!-- Name Column -->
+    <ng-container matColumnDef="cognome">
+        <th mat-header-cell *matHeaderCellDef> Cognome </th>
+        <td mat-cell *matCellDef="let element"> {{element.cognome}} </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
