--- a/src/app/component/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar.component.html
@@ -1,6 +1,10 @@
-<nav>
-    <button routerLink="/view1" routerLinkActive="active-link">View1</button>
-    <button routerLink="/view2" routerLinkActive="active-link">View2</button>
-    <button routerLink="/studente" routerLinkActive="active-link">Studente</button>
-    <button routerLinkActive="active-link">Empty</button>
-</nav>
+<p>
+  <mat-toolbar color="primary">
+    <span>My App</span>
+      <!-- <button mat-button routerLink="/view1" routerLinkActive="active-link">View1</button>
+      <button mat-button routerLink="/view2" routerLinkActive="active-link">View2</button> -->
+      <button mat-button routerLink="/studente" routerLinkActive="active-link">Studenti</button>
+      <button mat-button routerLink="/professore" routerLinkActive="active-link">Professori</button>
+      <button mat-button routerLink="/corso" routerLinkActive="active-link">Corsi</button>
+    </mat-toolbar>
+</p>
