--- a/src/app/modules/studente/studente.component.html
+++ b/src/app/modules/studente/studente.component.html
@@ -66,7 +66,7 @@
 </table>
 <button mat-raised-button color="primary" routerLink="/studente-form" routerLinkActive="active-link">Aggiungi un nuovo studente</button>
 
-<form class="form" [formGroup]="checkoutForm" (ngSubmit)="onSubmit()" [hidden]="!isVisible">
+<!-- <form class="form" [formGroup]="checkoutForm" (ngSubmit)="onSubmit()" [hidden]="!isVisible">
     <h1>Modifica lo studente {{studenteMod.id}}</h1>
     <p>
         <mat-form-field appearance="outline">
@@ -125,4 +125,4 @@
     </p>
 
     <button mat-raised-button color="primary" class="form" type="submit">Modifica studente</button>
-</form>
+</form> -->
