--- a/src/app/corso/corso.component.html
+++ b/src/app/corso/corso.component.html
@@ -1,1 +1,11 @@
 <p>corso works!</p>
+<!-- private Integer id;
+    private String nome;
+    private LocalDate dataInizioCorso;
+    private LocalDate dataFineCorso;
+    private LocalDate createdAt;
+    private LocalDate updatedAt;
+//    private LocalDate deletedAt;
+    private String descrizione; -->
+
+    
