--- a/src/app/component/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar.component.html
@@ -1,6 +1,12 @@
-<nav>
+<!-- <nav>
     <button routerLink="/view1" routerLinkActive="active-link">View1</button>
     <button routerLink="/view2" routerLinkActive="active-link">View2</button>
     <button routerLink="/studente" routerLinkActive="active-link">Studente</button>
     <button routerLinkActive="active-link">Empty</button>
+</nav> -->
+
+<nav mat-tab-nav-bar>
+  <a mat-tab-link routerLink="/studente" routerLinkActive="active-link" [active]="activeLink">Studenti</a>
+  <a mat-tab-link routerLink="/corso" routerLinkActive="active-link" [active]="activeLink">Corsi</a>
+  <a mat-tab-link routerLink="/docenti" routerLinkActive="active-link" [active]="activeLink">Docenti</a>
 </nav>
