--- a/src/app/modules/studente/studente.component.html
+++ b/src/app/modules/studente/studente.component.html
@@ -1,5 +1,99 @@
-<fieldset>Studente
-    <p>Nome: {{studente.nome}}</p>
-    <p>Cognome: {{studente.cognome}}</p>
-    <input routerLink="detail">
-</fieldset>
+<!-- <p>studente works!</p>
+<fieldset>
+      <p>Nome : {{studente.nome}}</p>
+      <p>Cognome: {{studente.cognome}}</p>
+
+      <button mat-raised-button></button>
+      <!-- <button (click)="clickedButton($event)"> Vai al dettaglio</button> -->
+<!-- </fieldset> -->
+<div class="top-table">
+  <div>
+  <mat-form-field>
+    <input matInput type="search"  placeholder="Filter" id ="search" [(ngModel)] ="searchValue"><!--(keyup)="applyFilter($event.target.value) " -->
+  </mat-form-field>
+</div>
+<mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons aria-label="Select page of periodic elements">
+</mat-paginator>
+</div>
+<table mat-table [dataSource]="dataSourceStudente" class="mat-elevation-z8">
+
+  <ng-container matColumnDef="id">
+    <th mat-header-cell *matHeaderCellDef> Id </th>
+    <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="nome" class="headCell">
+    <th mat-header-cell *matHeaderCellDef> Nome </th>
+    <td mat-cell *matCellDef="let element"> {{element.nome}} </td> <!-- of Studenti | searchfilter: searchValue -->
+  </ng-container>
+
+  <ng-container matColumnDef="cognome">
+    <th mat-header-cell *matHeaderCellDef> Cognome </th>
+    <td mat-cell *matCellDef="let element"> {{element.cognome}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="data">
+    <th mat-header-cell *matHeaderCellDef> Data nascita </th>
+    <td mat-cell *matCellDef="let element"> {{element.data}} </td>
+  </ng-container>
+  <ng-container matColumnDef="comuneDiNascita">
+    <th mat-header-cell *matHeaderCellDef> Comune di nascita </th>
+    <td mat-cell *matCellDef="let element"> {{element.comuneDiNascita}} </td>
+  </ng-container>
+  <ng-container matColumnDef="codiceFiscale">
+    <th mat-header-cell *matHeaderCellDef> Codice fiscale </th>
+    <td mat-cell *matCellDef="let element"> {{element.codiceFiscale}} </td>
+  </ng-container>
+  <ng-container matColumnDef="indirizzo">
+    <th mat-header-cell *matHeaderCellDef> Indirizzo </th>
+    <td mat-cell *matCellDef="let element"> {{element.indirizzo}} </td>
+  </ng-container>
+  <ng-container matColumnDef="comune">
+    <th mat-header-cell *matHeaderCellDef> Comune </th>
+    <td mat-cell *matCellDef="let element"> {{element.comune}} </td>
+  </ng-container>
+  <ng-container matColumnDef="cap">
+    <th mat-header-cell *matHeaderCellDef> Cap </th>
+    <td mat-cell *matCellDef="let element"> {{element.cap}} </td>
+  </ng-container>
+  <ng-container matColumnDef="prov">
+    <th mat-header-cell *matHeaderCellDef> Provincia </th>
+    <td mat-cell *matCellDef="let element"> {{element.prov}} </td>
+  </ng-container>
+  <ng-container matColumnDef="telefono">
+    <th mat-header-cell *matHeaderCellDef> Telefono </th>
+    <td mat-cell *matCellDef="let element"> {{element.telefono}} </td>
+  </ng-container>
+  <ng-container matColumnDef="createdAt">
+    <th mat-header-cell *matHeaderCellDef> Creato il</th>
+    <td mat-cell *matCellDef="let element"> {{element.createdAt}} </td>
+  </ng-container>
+  <!-- <ng-container matColumnDef="updatedAt">
+    <th mat-header-cell *matHeaderCellDef> Aggiornato il </th>
+    <td mat-cell *matCellDef="let element"> {{element.updatedAt}} </td>
+  </ng-container> -->
+  <ng-container matColumnDef="modifica">
+    <th mat-header-cell *matHeaderCellDef> Modifica </th> 
+    <td mat-cell *matCellDef="let element">
+     <button mat-flat-button color="secondary" (click)="modifyRow(element)" ><mat-icon>create</mat-icon></button><!-- click(modifica(element)) -->
+     </td>
+  </ng-container>
+
+  <ng-container matColumnDef="cancella">
+    <th mat-header-cell *matHeaderCellDef> Cancella</th>
+    <td mat-cell *matCellDef="let element">
+      <button mat-icon-button color="warn" (click)="toDeleteStudente(element.id)">
+          <mat-icon>delete</mat-icon> </button>
+     
+    </td>
+  </ng-container>
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+</table>
+<div class="container">
+<button mat-raised-button color="primary" routerLink="detail">Aggiungi un nuovo studente</button>
+<button mat-fab color="primary" routerLink="detail" ria-label="Aggiungi un nuovo studente">
+  <mat-icon>add</mat-icon></button>
+<!-- <button mat-flat-button ></button> -->
+</div>
