--- a/src/app/modules/professore-form/professore-form.component.html
+++ b/src/app/modules/professore-form/professore-form.component.html
@@ -55,5 +55,5 @@
         </mat-form-field>
     </p>
 
-    <button mat-raised-button color="primary" class="form" type="submit">Aggiungi docente</button>
+    <button mat-raised-button color="primary" class="form" type="submit">Salva docente</button>
 </form>
