--- a/src/app/modules/studente-form/studente-form.component.html
+++ b/src/app/modules/studente-form/studente-form.component.html
@@ -56,5 +56,5 @@
         </mat-form-field>
     </p>
 
-    <button mat-raised-button color="primary" class="form" type="submit">Aggiungi studente</button>
+    <button mat-raised-button color="primary" class="form" type="submit">Salva studente</button>
 </form>
