--- a/src/app/modules/studente/studente.component.sass
+++ b/src/app/modules/studente/studente.component.sass
@@ -10,7 +10,16 @@
 /*TABLE*/
 table
       width: 100%
-      margin: 1em
+      margin: 0.5em
+      table-layout: fixed
+
+
+th, td 
+  overflow: hidden
+//   width: 100%
+  text-overflow: Ellipsis
+  white-space: nowrap
+
       
 .mat-header-cell, .mat-cell
       padding-left:1.5em
