--- a/src/app/modules/studente/studente.component.html
+++ b/src/app/modules/studente/studente.component.html
@@ -1,3 +1,8 @@
+<div>
+    <mat-form-field>
+        <input matInput type="search" placeholder="Filter" (change)="filter($event)">
+    </mat-form-field>
+</div>
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
     <!--- Note that these columns can be defined in any order.
           The actual rendered columns are set as a property on the row definition" 
