--- a/src/app/component/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar.component.html
@@ -6,5 +6,6 @@
       <button mat-button routerLink="/studente" routerLinkActive="active-link">Studenti</button>
       <button mat-button routerLink="/professore" routerLinkActive="active-link">Professori</button>
       <button mat-button routerLink="/corso" routerLinkActive="active-link">Corsi</button>
+      <button mat-button routerLink="/registration" routerLinkActive="active-link">Assegnazione corsi</button>
     </mat-toolbar>
 </p>
