--- a/src/app/modules/corso/corso.component.html
+++ b/src/app/modules/corso/corso.component.html
@@ -1,3 +1,8 @@
+<div>
+    <mat-form-field>
+        <input matInput type="search" placeholder="Filter" (change)="filter($event)">
+    </mat-form-field>
+</div>
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
     <!--- Note that these columns can be defined in any order.
           The actual rendered columns are set as a property on the row definition"
@@ -33,16 +38,27 @@
         <td mat-cell *matCellDef="let element"> {{element.endDate}} </td>
     </ng-container>
 
-    <ng-container matColumnDef="azione">
-        <th mat-header-cell *matHeaderCellDef> Azione </th>
-        <td mat-cell *matCellDef="let element">
-            <button mat-raised-button (click)="startModify(element)">Modifica</button>
-            <button mat-raised-button color="warn" (click)="deleteCorso(element.id)">Rimuovi</button>  
+    <ng-container matColumnDef="modifica">
+        <th mat-header-cell *matHeaderCellDef> Modifica </th>
+        <td mat-cell *matCellDef="let element"> 
+            <button mat-icon-button color="" (click)="startModify(element)">
+                <mat-icon>create</mat-icon>
+            </button>
         </td>
     </ng-container>
 
+    <ng-container matColumnDef="rimuovi">
+        <th mat-header-cell *matHeaderCellDef> Rimuovi </th>
+        <td mat-cell *matCellDef="let element"> 
+            <button mat-icon-button color="warn" (click)="deleteCorso(element.id)">
+                <mat-icon>delete</mat-icon>
+            </button>
+        </td>
+    </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
-<button mat-raised-button color="primary" routerLink="/corso-form" routerLinkActive="active-link">Aggiungi un nuovo corso</button>
+<button mat-fab id="add" color="primary"  routerLink="/corso-form" routerLinkActive="active-link">
+    <mat-icon>add_circle</mat-icon>
+</button>
