--- a/src/app/modules/studente/studente.component.html
+++ b/src/app/modules/studente/studente.component.html
@@ -4,9 +4,6 @@
     </mat-form-field>
 </div>
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-    <!--- Note that these columns can be defined in any order.
-          The actual rendered columns are set as a property on the row definition" 
-    -->
 
     <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef> Id </th>
@@ -58,15 +55,27 @@
         <td mat-cell *matCellDef="let element"> {{element.houseNumber}} </td>
     </ng-container>
 
-    <ng-container matColumnDef="azione">
-        <th mat-header-cell *matHeaderCellDef> Azione </th>
+    <ng-container matColumnDef="modifica">
+        <th mat-header-cell *matHeaderCellDef> Modifica </th>
         <td mat-cell *matCellDef="let element"> 
-            <button mat-raised-button (click)="startModify(element)">Modifica</button>
-            <button mat-raised-button color="warn" (click)="deleteStudente(element.id)">Rimuovi</button>  
+            <button mat-icon-button color="" (click)="startModify(element)">
+                <mat-icon>create</mat-icon>
+            </button>
+        </td>
+    </ng-container>
+
+    <ng-container matColumnDef="rimuovi">
+        <th mat-header-cell *matHeaderCellDef> Rimuovi </th>
+        <td mat-cell *matCellDef="let element"> 
+            <button mat-icon-button color="warn" (click)="deleteStudente(element.id)">
+                <mat-icon>delete</mat-icon>
+            </button>
         </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
-<button mat-raised-button color="primary" routerLink="/studente-form" routerLinkActive="active-link">Aggiungi un nuovo studente</button>
+<button mat-fab id="add" color="primary"  routerLink="/studente-form" routerLinkActive="active-link">
+    <mat-icon>add_circle</mat-icon>
+</button>
