--- a/src/app/modules/studente/studente.component.sass
+++ b/src/app/modules/studente/studente.component.sass
@@ -9,8 +9,12 @@ table
   font-weight: 500
 
 mat-form-field 
-  width: 80%
-  padding: 5px
+  width: 30%
+  left: 1%
+
+#add
+  top: 1%
+  left: 1%
 
 
  
