Commit 30/12: gestita l'iscrizione di un studente ad un corso. Aggiunti i moduli per la registrazione.

--- a/src/app/modules/insegnamento-form/insegnamento-form.component.html
+++ b/src/app/modules/insegnamento-form/insegnamento-form.component.html
@@ -1,11 +1,11 @@
 <form class="form" [formGroup]="checkoutForm" (ngSubmit)="onSubmit()">
     <h2>
-        Studente: {{student.name}} {{student.surname}}
+        Professore: {{professor.name}} {{professor.surname}}
     </h2>
     <p>
         <mat-form-field appearance="fill">
             <mat-label>Corso</mat-label>
-            <mat-select formControlName="courseRegistrationDto">
+            <mat-select formControlName="courses">
                 <mat-option *ngFor="let c of course" [value]="c.id">
                     {{c.name}}
                 </mat-option>
