--- a/src/app/modules/registrations/registrations.component.sass
+++ b/src/app/modules/registrations/registrations.component.sass
@@ -8,9 +8,8 @@ table
   color: #3f51b5
   font-weight: 500
 
-mat-form-field 
-  width: 30%
-  left: 1%
+div
+  text-align: center
 
 #add
   top: 1%
