--- a/src/app/modules/professore/professore.component.html
+++ b/src/app/modules/professore/professore.component.html
@@ -1,7 +1,8 @@
 <div>
     <mat-form-field>
-        <input matInput type="search" placeholder="Filter" (change)="filter($event)">
+        <input matInput placeholder="Filter" (keyup)="filter($event)">
     </mat-form-field>
+    <mat-icon>search</mat-icon>
 </div>
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
     <!--- Note that these columns can be defined in any order.
@@ -56,6 +57,15 @@
     <ng-container matColumnDef="civico">
         <th mat-header-cell *matHeaderCellDef> Numero civico </th>
         <td mat-cell *matCellDef="let element"> {{element.houseNumber}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="corso">
+        <th mat-header-cell *matHeaderCellDef> Insegna </th>
+        <td mat-cell *matCellDef="let element"> 
+            <button mat-icon-button color="" (click)="addCourse(element)">
+                <mat-icon>add</mat-icon>
+            </button>
+        </td>
     </ng-container>
 
     <ng-container matColumnDef="modifica">
