--- a/src/app/modules/registrations/registrations.component.html
+++ b/src/app/modules/registrations/registrations.component.html
@@ -1,19 +1,16 @@
 <div>
-    <mat-form-field>
-        <input matInput placeholder="Filter" (keyup)="filter($event)">
-    </mat-form-field>
-    <mat-icon>search</mat-icon>
+    <h3> Corsi seguiti da 
+        <br>
+        <h2>{{student.name}} {{student.surname}}</h2>
+    </h3>
 </div>
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-    <!--- Note that these columns can be defined in any order.
-          The actual rendered columns are set as a property on the row definition"
-    -->
 
     <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef> Id </th>
         <td mat-cell *matCellDef="let element"> {{element.id}} </td>
     </ng-container>
->
+
     <ng-container matColumnDef="nome">
         <th mat-header-cell *matHeaderCellDef> Nome </th>
         <td mat-cell *matCellDef="let element"> {{element.name}} </td>
@@ -39,27 +36,9 @@
         <td mat-cell *matCellDef="let element"> {{element.endDate}} </td>
     </ng-container>
 
-    <ng-container matColumnDef="modifica">
-        <th mat-header-cell *matHeaderCellDef> Modifica </th>
-        <td mat-cell *matCellDef="let element"> 
-            <button mat-icon-button color="" (click)="startModify(element)">
-                <mat-icon>create</mat-icon>
-            </button>
-        </td>
-    </ng-container>
-
-    <ng-container matColumnDef="rimuovi">
-        <th mat-header-cell *matHeaderCellDef> Rimuovi </th>
-        <td mat-cell *matCellDef="let element"> 
-            <button mat-icon-button color="warn" (click)="deleteCorso(element.id)">
-                <mat-icon>delete</mat-icon>
-            </button>
-        </td>
-    </ng-container>
-
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
-<button mat-fab id="add" color="primary"  routerLink="/corso-form" routerLinkActive="active-link">
-    <mat-icon>add_circle</mat-icon>
+<button mat-fab id="add" color="primary"  routerLink="/registration-form" routerLinkActive="active-link">
+    <mat-icon>library_add</mat-icon>
 </button>
