--- a/src/app/modules/corso-form/corso-form.component.sass
+++ b/src/app/modules/corso-form/corso-form.component.sass
@@ -1,9 +1,15 @@
+#title
+  text-align: center
+
+#title h1
+  color: #3f51b5
+
 .form
     text-align: center
 
 mat-form-field
     font-weight: 500
     font-size: 1rem
-    width: 70%
+    width: 350px
 
-    
+
