--- a/src/app/modules/corso/corso.component.html
+++ b/src/app/modules/corso/corso.component.html
@@ -1,65 +1,67 @@
-<div>
-    <mat-form-field>
+ <mat-form-field>
         <input matInput placeholder="Filter" (keyup)="filter($event)">
     </mat-form-field>
     <mat-icon>search</mat-icon>
+<div class="container">
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+      <!--- Note that these columns can be defined in any order.
+            The actual rendered columns are set as a property on the row definition"
+      -->
+
+      <ng-container matColumnDef="id">
+          <th mat-header-cell *matHeaderCellDef> Id </th>
+          <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+      </ng-container>
+  >
+      <ng-container matColumnDef="nome">
+          <th mat-header-cell *matHeaderCellDef> Nome </th>
+          <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="descrizione">
+          <th mat-header-cell *matHeaderCellDef> Descrizione </th>
+          <td mat-cell *matCellDef="let element"> {{element.description}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="docente">
+          <th mat-header-cell *matHeaderCellDef> Docente </th>
+          <td mat-cell *matCellDef="let element"> {{element.professor.name}} {{element.professor.surname}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="dataDiInizio">
+          <th mat-header-cell *matHeaderCellDef> Data di inizio corso </th>
+          <td mat-cell *matCellDef="let element"> {{element.startDate}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="dataDiFine">
+          <th mat-header-cell *matHeaderCellDef> Data di fine corso </th>
+          <td mat-cell *matCellDef="let element"> {{element.endDate}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="modifica">
+          <th mat-header-cell *matHeaderCellDef> Modifica </th>
+          <td mat-cell *matCellDef="let element">
+              <button mat-icon-button color="" (click)="startModify(element)">
+                  <mat-icon>create</mat-icon>
+              </button>
+          </td>
+      </ng-container>
+
+      <ng-container matColumnDef="rimuovi">
+          <th mat-header-cell *matHeaderCellDef> Rimuovi </th>
+          <td mat-cell *matCellDef="let element">
+              <button mat-icon-button color="warn" (click)="deleteCorso(element.id)">
+                  <mat-icon>delete</mat-icon>
+              </button>
+          </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;" [ngClass]="{'highlight': selectedRowIndex == row.id}"></tr>
+  </table>
+  <app-corso-form [idInput]="idCourse" (digitClick)="digitClickEvent($event)" *ngIf="isClicked==true"></app-corso-form>
 </div>
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-    <!--- Note that these columns can be defined in any order.
-          The actual rendered columns are set as a property on the row definition"
-    -->
+ <button mat-fab id="add" color="primary" (click)="addCourse()">
+   <mat-icon>add_circle</mat-icon>
+ </button>
 
-    <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef> Id </th>
-        <td mat-cell *matCellDef="let element"> {{element.id}} </td>
-    </ng-container>
->
-    <ng-container matColumnDef="nome">
-        <th mat-header-cell *matHeaderCellDef> Nome </th>
-        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="descrizione">
-        <th mat-header-cell *matHeaderCellDef> Descrizione </th>
-        <td mat-cell *matCellDef="let element"> {{element.description}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="docente">
-        <th mat-header-cell *matHeaderCellDef> Docente </th>
-        <td mat-cell *matCellDef="let element"> {{element.professor.name}} {{element.professor.surname}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="dataDiInizio">
-        <th mat-header-cell *matHeaderCellDef> Data di inizio corso </th>
-        <td mat-cell *matCellDef="let element"> {{element.startDate}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="dataDiFine">
-        <th mat-header-cell *matHeaderCellDef> Data di fine corso </th>
-        <td mat-cell *matCellDef="let element"> {{element.endDate}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="modifica">
-        <th mat-header-cell *matHeaderCellDef> Modifica </th>
-        <td mat-cell *matCellDef="let element"> 
-            <button mat-icon-button color="" (click)="startModify(element)">
-                <mat-icon>create</mat-icon>
-            </button>
-        </td>
-    </ng-container>
-
-    <ng-container matColumnDef="rimuovi">
-        <th mat-header-cell *matHeaderCellDef> Rimuovi </th>
-        <td mat-cell *matCellDef="let element"> 
-            <button mat-icon-button color="warn" (click)="deleteCorso(element.id)">
-                <mat-icon>delete</mat-icon>
-            </button>
-        </td>
-    </ng-container>
-
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>
-<button mat-fab id="add" color="primary"  routerLink="/corso-form" routerLinkActive="active-link">
-    <mat-icon>add_circle</mat-icon>
-</button>
