--- a/src/app/modules/corso/corso.component.sass
+++ b/src/app/modules/corso/corso.component.sass
@@ -1,4 +1,4 @@
-table 
+table
   width: 100%
 
 .form
@@ -8,11 +8,21 @@ table
   color: #3f51b5
   font-weight: 500
 
-mat-form-field 
+mat-form-field
   width: 30%
   left: 1%
 
 #add
   top: 1%
   left: 1%
+
+.container
+  display: flex
+  justify-content: space-around
+
+.highlight
+  background: #00BB2D
+
+
+
 
