--- a/src/app/modules/insegnamento-form/insegnamento-form.component.html
+++ b/src/app/modules/insegnamento-form/insegnamento-form.component.html
@@ -1,17 +1,22 @@
-<form class="form" [formGroup]="checkoutForm" (ngSubmit)="onSubmit()">
-    <h2>
-        Professore: {{professor.name}} {{professor.surname}}
-    </h2>
-    <p>
-        <mat-form-field appearance="fill">
-            <mat-label>Corso</mat-label>
-            <mat-select formControlName="courses">
-                <mat-option *ngFor="let c of course" [value]="c.id">
-                    {{c.name}}
-                </mat-option>
-            </mat-select>
-        </mat-form-field>
-    </p>
+<mat-dialog-content class="mat-typography">
+  <form class="form" [formGroup]="checkoutForm" (ngSubmit)="onSubmit()">
+      <h2>
+          Professore: {{professor.name}} {{professor.surname}}
+      </h2>
+      <p>
+          <mat-form-field appearance="fill">
+              <mat-label>Corso</mat-label>
+              <mat-select formControlName="courses">
+                  <mat-option *ngFor="let c of course" [value]="c.id">
+                      {{c.name}}
+                  </mat-option>
+              </mat-select>
+          </mat-form-field>
+      </p>
 
-    <button mat-raised-button color="primary" class="form" type="submit">Salva registrazione</button>
-</form>
+      <mat-dialog-actions align="center">
+        <button mat-raised-button mat-dialog-close>Indietro</button>
+        <button mat-raised-button [mat-dialog-close]="true" color="primary" class="form" type="submit">Salva registrazione</button>
+      </mat-dialog-actions>
+  </form>
+</mat-dialog-content>
