--- a/src/app/modules/professore-form/professore-form.component.sass
+++ b/src/app/modules/professore-form/professore-form.component.sass
@@ -1,3 +1,9 @@
+#title
+  text-align: center
+
+#title h1
+  color: #3f51b5
+
 .form
     text-align: center
 
@@ -6,4 +12,5 @@ mat-form-field
     font-size: 1rem
     width: 70%
 
-    
+::ng-deep .mat-dialog-content
+  height: 100%
