--- a/src/app/modules/professore/professore.component.html
+++ b/src/app/modules/professore/professore.component.html
@@ -6,14 +6,14 @@
 </div>
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
     <!--- Note that these columns can be defined in any order.
-          The actual rendered columns are set as a property on the row definition" 
+          The actual rendered columns are set as a property on the row definition"
     -->
 
     <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef> Id </th>
         <td mat-cell *matCellDef="let element"> {{element.id}} </td>
     </ng-container>
-    
+
     <ng-container matColumnDef="nome">
         <th mat-header-cell *matHeaderCellDef> Nome </th>
         <td mat-cell *matCellDef="let element"> {{element.name}} </td>
@@ -61,7 +61,7 @@
 
     <ng-container matColumnDef="corso">
         <th mat-header-cell *matHeaderCellDef> Insegna </th>
-        <td mat-cell *matCellDef="let element"> 
+        <td mat-cell *matCellDef="let element">
             <button mat-icon-button color="" (click)="addCourse(element)">
                 <mat-icon>add</mat-icon>
             </button>
@@ -70,7 +70,7 @@
 
     <ng-container matColumnDef="modifica">
         <th mat-header-cell *matHeaderCellDef> Modifica </th>
-        <td mat-cell *matCellDef="let element"> 
+        <td mat-cell *matCellDef="let element">
             <button mat-icon-button color="" (click)="startModify(element)">
                 <mat-icon>create</mat-icon>
             </button>
@@ -79,7 +79,7 @@
 
     <ng-container matColumnDef="rimuovi">
         <th mat-header-cell *matHeaderCellDef> Rimuovi </th>
-        <td mat-cell *matCellDef="let element"> 
+        <td mat-cell *matCellDef="let element">
             <button mat-icon-button color="warn" (click)="deleteProfessore(element.id)">
                 <mat-icon>delete</mat-icon>
             </button>
@@ -89,7 +89,7 @@
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
-<button mat-fab id="add" color="primary"  routerLink="/professore-form" routerLinkActive="active-link">
+<button mat-fab id="add" color="primary" (click)="addProfessor()">
     <mat-icon>add_circle</mat-icon>
 </button>
 
