--- a/src/app/modules/studente-form/studente-form.component.sass
+++ b/src/app/modules/studente-form/studente-form.component.sass
@@ -1,3 +1,9 @@
+#title
+  text-align: center
+
+#title h1
+  color: #3f51b5
+
 .form
     text-align: center
 
@@ -6,6 +12,11 @@ mat-form-field
     font-size: 1rem
     width: 70%
 
-mat-form-field:hover
-    
-    
+::ng-deep .mat-dialog-container
+    width: 1000px
+
+::ng-deep .mat-dialog-content
+  height: 100%
+
+
+
