--- a/src/app/modules/studente/studente.component.html
+++ b/src/app/modules/studente/studente.component.html
@@ -58,7 +58,7 @@
 
     <ng-container matColumnDef="corso">
         <th mat-header-cell *matHeaderCellDef> Corsi seguiti </th>
-        <td mat-cell *matCellDef="let element"> 
+        <td mat-cell *matCellDef="let element">
             <button mat-icon-button color="" (click)="courses(element)">
                 <mat-icon>library_books</mat-icon>
             </button>
@@ -67,7 +67,7 @@
 
     <ng-container matColumnDef="modifica">
         <th mat-header-cell *matHeaderCellDef> Modifica </th>
-        <td mat-cell *matCellDef="let element"> 
+        <td mat-cell *matCellDef="let element">
             <button mat-icon-button color="" (click)="startModify(element)">
                 <mat-icon>create</mat-icon>
             </button>
@@ -76,7 +76,7 @@
 
     <ng-container matColumnDef="rimuovi">
         <th mat-header-cell *matHeaderCellDef> Rimuovi </th>
-        <td mat-cell *matCellDef="let element"> 
+        <td mat-cell *matCellDef="let element">
             <button mat-icon-button color="warn" (click)="deleteStudente(element.id)">
                 <mat-icon>delete</mat-icon>
             </button>
@@ -86,6 +86,6 @@
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
-<button mat-fab id="add" color="primary"  routerLink="/studente-form" routerLinkActive="active-link">
+<button mat-fab id="add" color="primary" (click)="addStudent()">
     <mat-icon>add_circle</mat-icon>
 </button>
