--- a/src/app/modules/professore/professore.component.sass
+++ b/src/app/modules/professore/professore.component.sass
@@ -1,4 +1,4 @@
-table 
+table
   width: 100%
 
 .form
@@ -8,10 +8,13 @@ table
   color: #3f51b5
   font-weight: 500
 
-mat-form-field 
+mat-form-field
   width: 30%
   left: 1%
 
 #add
   top: 1%
   left: 1%
+
+.highlight
+  background: #00BB2D
