Commit 17/01: Gestito il passaggio di informazioni tra component con i dialog. Gestito l'unsubscribe di uno studente da un corso. Fatto l'unsubscribe dei vari subscribe.

--- a/src/app/modules/professore-form/professore-form.component.html
+++ b/src/app/modules/professore-form/professore-form.component.html
@@ -78,7 +78,7 @@
 
       <mat-dialog-actions align="center">
         <button mat-raised-button mat-dialog-close>Indietro</button>
-        <button mat-raised-button [mat-dialog-close]="true" color="primary" class="form" type="submit">Salva docente</button>
+        <button mat-raised-button color="primary" class="form" type="submit">Salva docente</button>
       </mat-dialog-actions>
   </form>
 </mat-dialog-content>
