--- a/src/app/modules/studente-form/studente-form.component.html
+++ b/src/app/modules/studente-form/studente-form.component.html
@@ -79,7 +79,7 @@
 
       <mat-dialog-actions align="center">
         <button mat-raised-button mat-dialog-close>Indietro</button>
-        <button mat-raised-button [mat-dialog-close]="true" color="primary" class="form" type="submit">Salva studente</button>
+        <button mat-raised-button color="primary" class="form" type="submit">Salva studente</button>
       </mat-dialog-actions>
   </form>
 </mat-dialog-content>
