--- a/src/app/modules/registration-form/registration-form.component.html
+++ b/src/app/modules/registration-form/registration-form.component.html
@@ -16,7 +16,7 @@
 
       <mat-dialog-actions align="center">
         <button mat-raised-button mat-dialog-close>Indietro</button>
-        <button mat-raised-button [mat-dialog-close]="true" color="primary" class="form" type="submit">Salva registrazione</button>
+        <button mat-raised-button color="primary" class="form" type="submit">Salva registrazione</button>
       </mat-dialog-actions>
   </form>
 </mat-dialog-content>
