--- a/src/app/modules/registrations/registrations.component.html
+++ b/src/app/modules/registrations/registrations.component.html
@@ -36,8 +36,17 @@
         <td mat-cell *matCellDef="let element"> {{element.endDate}} </td>
     </ng-container>
 
+    <ng-container matColumnDef="rimuovi">
+      <th mat-header-cell *matHeaderCellDef> Abbandona </th>
+      <td mat-cell *matCellDef="let element">
+        <button mat-icon-button color="warn" (click)="deleteRegistration(student, element)">
+          <mat-icon>delete</mat-icon>
+        </button>
+      </td>
+    </ng-container>
+
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;" [ngClass]="{'highlight': selectedRowIndex == row.id}"></tr>
 </table>
 <button mat-fab id="add" color="primary" (click)="addCourse()">
     <mat-icon>library_add</mat-icon>
